# tinfer-ai

./: .gitignore  README.md  Tinfer_Setup.ipynb  pyproject.toml
.github/workflows/: build.yml
tinfer/: __init__.py  cli.py  client.py  server.py  setup_engine.py
